--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,3 +177,62 @@ jobs:
             -Dsonar.test.inclusions=**/*.spec.ts
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  compose_smoke:
+    name: "Docker Compose smoke test (PR)"
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+
+    # Que sur PR
+    if: github.event_name == 'pull_request'
+
+    # "fail fast" : ne teste compose que si back/front CI OK
+    needs: [back, front]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Start stack (docker compose up)
+        run: docker compose up -d --build
+
+      - name: Smoke test (back + front)
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          echo "Waiting for BACK on http://localhost:8080/ ..."
+          for i in {1..30}; do
+            if curl -fsS http://localhost:8080/ >/dev/null; then
+              echo "BACK OK"
+              break
+            fi
+            sleep 4
+          done
+          # Re-check "hard fail" si jamais la boucle n'a pas break
+          curl -fsS http://localhost:8080/ >/dev/null
+
+          echo "Waiting for FRONT on http://localhost/ ..."
+          for i in {1..30}; do
+            if curl -fsS http://localhost/ >/dev/null; then
+              echo "FRONT OK"
+              break
+            fi
+            sleep 4
+          done
+          curl -fsS http://localhost/ >/dev/null
+
+      - name: Compose status (always)
+        if: always()
+        run: docker compose ps
+
+      - name: Logs (only on failure)
+        if: failure()
+        run: docker compose logs --no-color
+
+      - name: Tear down (always)
+        if: always()
+        run: docker compose down -v --remove-orphans
