fix(elk): allow Logstash to read Caddy access logs. Set Caddy log file permissions to 0644 (mode option) so Logstash can ingest /data/logs/caddy-access.json.

--- a/misc/docker/Caddyfile
+++ b/misc/docker/Caddyfile
@@ -6,7 +6,9 @@
 
   # Access logs JSON pour ingestion ELK
   log {
-    output file /data/logs/caddy-access.json
+  output file /data/logs/caddy-access.json {
+    mode 0644
+  }
     format json
   }
 }
